# idr

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in
include/: bedFile.cpp  bedFile.h  idr.h  interval.h  processPeaks.h  ranker.h
include/bedtools/: bedFile.h
python/: IDR_parameter_estimation.c  IDR_parameter_estimation.h  Makefile  idr.py  inv_cdf.pyx  optimization.py  pseudo_value_method.py  stuff_i_pbly_wont_use.py  symbolic.py  test_inv_cdf.py  utility.py
src/: CMakeLists.txt  bedFile.cpp  genomeFile.cpp  gzstream.C  idr.cpp  parameter_estimation.cpp  processPeaks.cpp  processPeaks.h
src/bedtools/: lineFileUtilities.h
test/: .travis_build.sh  CMakeLists.txt  main.cpp
test/idr/: test_feature.cpp
tests/: .travis_build.sh  command-line-args-test.h  main.cpp
